[ci skip] Fix attach a file button whitespace

--- a/app/assets/stylesheets/pages/notes.scss
+++ b/app/assets/stylesheets/pages/notes.scss
@@ -685,3 +685,11 @@ a .note-headline-light {
     position: relative;
   }
 }
+
+.attach-a-file {
+  @include gl-link-hover-focus-state;
+
+  .toolbar-button-icon {
+    margin-right: 5px;
+  }
+}
